Implement minimal maplibre map + fix formatting, linting

--- a/zimui/style.css
+++ b/zimui/style.css
@@ -1,6 +1,7 @@
-/* @import "node_modules/ol/ol.css"; */
+@import "node_modules/maplibre-gl/dist/maplibre-gl.css";
 
-html, body {
+html,
+body {
   margin: 0;
   height: 100%;
 }
